Prepare for Render deployment

--- a/public/views/footer.ejs
+++ b/public/views/footer.ejs
@@ -1,6 +1,6 @@
 
 
-<link rel="stylesheet" href="styles/footer.css">
+<link rel="stylesheet" href="./styles/footer.css">
 
 <!-- Footer -->
     <footer class="site-footer">
