--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="styles/header.css">
-<link rel="stylesheet" href="styles/animations.css">
-<link rel="stylesheet" href="styles/components.css">
-<link rel="stylesheet" href="styles/themes.css">
-<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="./styles/header.css">
+<link rel="stylesheet" href="./styles/animations.css">
+<link rel="stylesheet" href="./styles/components.css">
+<link rel="stylesheet" href="./styles/themes.css">
+<link rel="stylesheet" href="./styles/main.css">
 
 
 <!-- Header -->
