--- a/public/views/header.ejs
+++ b/public/views/header.ejs
@@ -12,7 +12,7 @@
                 <span class="name-element" data-original="Ahmad" data-alt="A7M4D">Ahmad</span>
                 <span class="arabic-name">أحمد</span>
             </div>
-            <div class="nav-center">
+            <div class="header-clock">
                 <div class="digital-clock" id="header-clock"></div>
             </div>
             <div class="nav-actions">
