resolve merge conflicts

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -32,7 +32,7 @@
                         <span class="degree-text binary-flicker">Computer Science Undergraduate</span>
                     </div>
                     <div class="hero-actions">
-                        <a href="contact.html" class="cta-button">Let's Talk</a>
+                        <a href="/contact" class="cta-button">Let's Talk</a>
                     </div>
                 </div>
             </div>
